description = "Sends web-notifications to registered clients"

apply plugin: 'groovy'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

version = '0.0.1'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

compileJava {
    //TODO Remove when split packages is no longer an issue
    doFirst {
        options.compilerArgs = ['--module-path', classpath.asPath]
        classpath = files()
    }
}

test {
    useJUnitPlatform()
    jvmArgs '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED' //TODO Cassandra 4 - Remove when no longer needed
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok:1.18.18'
    compileOnly 'org.projectlombok:lombok:1.18.18'

    implementation 'org.springframework.boot:spring-boot-starter:2.4.3'
    implementation 'org.springframework.kafka:spring-kafka:2.6.6'
    implementation 'io.vertx:vertx-core:4.0.2'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.12.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.2'
    implementation 'com.google.guava:guava:30.1-jre'

    testImplementation project(':test-utils')
    testImplementation 'org.codehaus.groovy:groovy:3.0.7'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.3'
    testImplementation 'org.springframework.kafka:spring-kafka-test:2.6.6'
    testImplementation 'org.spockframework:spock-spring:2.0-M4-groovy-3.0'
}

configurations {
    //TODO Remove when split packages is no longer an issue
    implementation.exclude group: 'com.google.code.findbugs', module: 'jsr305'
}
